--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "astro": "^1.6.0"
+  "devDependencies": {
+    "astro": "1.6.0",
+    "vite-plugin-glsl": "0.5.3"
   }
 }
