--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vggl",
+  "name": "vggi",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -8,10 +8,21 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint . --ext .js,.cjs,.ts,.astro",
+    "format": "prettier -w . --cache --plugin-search-dir=."
   },
   "devDependencies": {
+    "@astrojs/tailwind": "2.1.2",
+    "@typescript-eslint/eslint-plugin": "5.42.0",
+    "@typescript-eslint/parser": "5.42.0",
     "astro": "1.6.0",
+    "astro-eslint-parser": "0.9.0",
+    "eslint": "8.26.0",
+    "eslint-plugin-astro": "0.21.0",
+    "prettier": "2.7.1",
+    "prettier-plugin-astro": "0.7.0",
+    "tailwindcss": "3.2.1",
     "vite-plugin-glsl": "0.5.3"
   }
 }
