--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "prettier-plugin-astro": "0.7.0",
     "tailwindcss": "3.2.1",
     "vite-plugin-glsl": "0.5.3"
+  },
+  "dependencies": {
+    "@math.gl/core": "3.6.3"
   }
 }
