--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "format": "prettier -w . --cache --plugin-search-dir=."
   },
   "devDependencies": {
-    "@astrojs/tailwind": "2.1.2",
-    "@typescript-eslint/eslint-plugin": "5.42.0",
-    "@typescript-eslint/parser": "5.42.0",
-    "astro": "1.6.0",
-    "astro-eslint-parser": "0.9.0",
-    "eslint": "8.26.0",
-    "eslint-plugin-astro": "0.21.0",
-    "prettier": "2.7.1",
+    "@astrojs/tailwind": "2.1.3",
+    "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "5.46.0",
+    "astro": "1.7.1",
+    "astro-eslint-parser": "0.9.2",
+    "eslint": "8.30.0",
+    "eslint-plugin-astro": "0.21.1",
+    "prettier": "2.8.1",
     "prettier-plugin-astro": "0.7.0",
-    "tailwindcss": "3.2.1",
-    "vite-plugin-glsl": "0.5.3"
+    "tailwindcss": "3.2.4",
+    "vite-plugin-glsl": "1.0.1"
   },
   "dependencies": {
-    "@math.gl/core": "3.6.3"
+    "@math.gl/core": "3.6.3",
+    "tweakpane": "3.1.1"
   }
 }
